@@ -1,3 +1,8 @@
+2002-06-23  wakaba <w@suika.fam.cx>
+
+	* TextPlain.pm (stringify): Minimumize MIME charset name
+	(bug fix).
+
 2002-06-16  wakaba <w@suika.fam.cx>
 
 	* Text.pm, TextPlain.pm (_init): Bug fix of normalization
